Complete re-work to work with current Nova, private feature

--- a/plugins/inventory/nova.ini
+++ b/plugins/inventory/nova.ini
@@ -2,29 +2,27 @@
 
 [openstack]
 # API version
-version       = 2
+version = 2
 
 # OpenStack nova username
-username      =
+username = someuser
 
-# OpenStack nova api_key
-api_key       =
+# OpenStack password
+password = ckr1t
 
 # OpenStack nova auth_url
-auth_url      =
+auth_url = https://127.0.0.1:35357/v2.0/
+
+# OpenStack nova project_id (also known as tenant_name)
+project_id = someuser-project1
 
 # Authentication system
-auth_system =
+auth_system = keystone
 
-# OpenStack nova project_id
-project_id    = 
+# Server region name to use
+region_name = region-a.geo-1,region-b.geo-1
 
-# Serverarm region name to use
-region_name   =
+# Service type
+service_type = compute
 
-# TODO: Some other options
-# insecure      =
-# endpoint_type =
-# extensions    =
-# service_type  =
-# service_name  =
+insecure = 0
